change home page issue spacing

--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ html, body {
    height: 100%;
    margin: 0px;
    padding: 0px;
-   overflow-x: scroll;
 }
 
 /* attempt at centering the issue list in the middle of the browser window */
@@ -33,8 +32,8 @@ html, body {
 
 /* format and animate the issue covers */
 .issue_cover {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
     border: 1px solid black;
     height: 250px;
     -webkit-transition: width 1s, height 1s;
